--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,8 @@ spring.datasource.password=kijanka321
 spring.jpa.show-sql= true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+# 1 CHANGE TO CREATE-DROP AT THE END OF CODING @TODO
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
+#UNCOMMENT BELOW AFTER CHANGE NO 1 @TODO
+#spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.mode=always
