--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.jpa.hibernate.ddl-auto=update
 # 1 CHANGE TO CREATE-DROP AT THE END OF CODING @TODO
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #UNCOMMENT BELOW AFTER CHANGE NO 1 @TODO
-#spring.jpa.defer-datasource-initialization=true
-#spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
