Ebook controller renamed and finished. Admin controller etc started

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=kijanka321
 
 spring.jpa.show-sql= true
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 # 1 CHANGE TO CREATE-DROP AT THE END OF CODING @TODO
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #UNCOMMENT BELOW AFTER CHANGE NO 1 @TODO
