--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,13 @@
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/ebookstore
 spring.datasource.username=root
 spring.datasource.password=kijanka321
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql= true
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
 # 1 CHANGE TO CREATE-DROP AT THE END OF CODING @TODO
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+
 #UNCOMMENT BELOW AFTER CHANGE NO 1 @TODO
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
+#spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.mode=always
+
